1. Dopped the table "Customers" 2. Dropped the relationships between Customers to Accounts and Credit Cards. 3. Removed the tab for Customers. 4. Added a migration called CustomersDropped. 5. Updated the database. 6. Added the required fields in the views. 7. Tested the project with the server's database and it's all functioning.

--- a/744Project/Views/CreditCards/Details.cshtml
+++ b/744Project/Views/CreditCards/Details.cshtml
@@ -22,12 +22,27 @@
                     </dd>
 
                     <dt>
-                        @Html.DisplayNameFor(model => model.Customer.customerFirstname)
+                        @Html.DisplayNameFor(model => model.firstName)
                     </dt>
 
                     <dd>
-                        @Html.DisplayFor(model => model.Customer.customerFirstname)
+                        @Html.DisplayFor(model => model.firstName)
                     </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.lastName)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.lastName)
+                    </dd>
+
+                    @*<dt>
+            @Html.DisplayNameFor(model => model.Customer.customerFirstname)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Customer.customerFirstname)
+        </dd>*@
 
                     <dt>
                         @Html.DisplayNameFor(model => model.cardNumber)
