--- a/744Project/Views/Shared/_Layout.cshtml
+++ b/744Project/Views/Shared/_Layout.cshtml
@@ -27,10 +27,9 @@
 
 				<li>@Html.ActionLink("Network","Index","Network")</li>
                 <li>@Html.ActionLink("Stores", "Index", "Stores")</li>
-                <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>
-                //The 2 lines below are just to view the pages, and will be deleted later:
+                <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>                
                 <li>@Html.ActionLink("Credit Cards", "Index", "CreditCards")</li>
-                <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+                @*<li>@Html.ActionLink("Customers", "Index", "Customers")</li>*@
 }
                 </ul>
                 @Html.Partial("_LoginPartial")
