--- a/744Project/Views/Accounts/Create.cshtml
+++ b/744Project/Views/Accounts/Create.cshtml
@@ -34,13 +34,13 @@
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    @*<div class="form-group">
                         @Html.LabelFor(model => model.customerID, "customerID", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.DropDownList("customerID", null, htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.customerID, "", new { @class = "text-danger" })
                         </div>
-                    </div>
+                    </div>*@
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.accountName, htmlAttributes: new { @class = "control-label col-md-2" })
