UI for transactions

--- a/744Project/Views/Shared/_Layout.cshtml
+++ b/744Project/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 <li>@Html.ActionLink("Stores", "Index", "Stores")</li>
                 <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>                
                 <li>@Html.ActionLink("Credit Cards", "Index", "CreditCards")</li>
-                @*<li>@Html.ActionLink("Customers", "Index", "Customers")</li>*@
+                <li>@Html.ActionLink("Transactions", "Index", "Transactions")</li>
 }
                 </ul>
                 @Html.Partial("_LoginPartial")
