I just many things, but to make the list short: 1. I added most of the required validations for creating, editing, and deleting accounts. 2. I added all the required validations for creating, editing, and deleting credit cards. 3. One main validation remains which is adding a credit card when creating a new account. 4. One enhancement can be done for credit cards, which is generating a card number so admins don't need to manually type the 16-digits card number everythime they add a new credit card. 5. I added a new feature which makes the account number a little more realistec. When an admin creats an account, the account number will be taken copied from the account ID. I set the account ID in the database to start from 10000000 or something like that :) to make it more realistec.

--- a/744Project/Views/Accounts/Details.cshtml
+++ b/744Project/Views/Accounts/Details.cshtml
@@ -12,13 +12,13 @@
                 <hr />
                 <dl class="dl-horizontal">
                     @*<dt>
-                        @Html.DisplayNameFor(model => model.Customer.customerFirstname)
+            @Html.DisplayNameFor(model => model.Customer.customerFirstname)
 
-                    </dt>
+        </dt>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Customer.customerFirstname)
-                    </dd>*@
+        <dd>
+            @Html.DisplayFor(model => model.Customer.customerFirstname)
+        </dd>*@
 
                     <dt>
                         @Html.DisplayNameFor(model => model.accountNumber)
@@ -42,6 +42,55 @@
 
                     <dd>
                         @Html.DisplayFor(model => model.accountName)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.accountFirstName)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.accountFirstName)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.accountLastName)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.accountLastName)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.accountAddress)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.accountAddress)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.accountCity)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.accountCity)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.accountState)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.accountState)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.accountZip)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.accountZip)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.accountPhone)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.accountPhone)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.accountMax)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.accountMax)
                     </dd>
 
                 </dl>
