--- a/744Project/Views/Accounts/Edit.cshtml
+++ b/744Project/Views/Accounts/Edit.cshtml
@@ -26,6 +26,7 @@
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.accountBalance, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.accountBalance, "", new { @class = "text-danger" })
+                        @*@Html.ValidationMessageFor(model => model.accountBalance)*@
                     </div>
                 </div>
                
