--- a/744Project/Views/CreditCards/Create.cshtml
+++ b/744Project/Views/CreditCards/Create.cshtml
@@ -34,14 +34,14 @@
                         @Html.ValidationMessageFor(model => model.lastName, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                @*Card number:*@
-                <div class="form-group">
+               @*Card number:*@
+                @*<div class="form-group">
                     @Html.LabelFor(model => model.cardNumber, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.cardNumber, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.cardNumber, "", new { @class = "text-danger" })
                     </div>
-                </div>
+                </div>*@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.cardExpirationDate, htmlAttributes: new { @class = "control-label col-md-2" })
