--- a/744Project/Views/Accounts/Create.cshtml
+++ b/744Project/Views/Accounts/Create.cshtml
@@ -111,7 +111,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.creditCard.cardExpirationDate, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.creditCard.cardExpirationDate, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.creditCard.cardExpirationDate, new { htmlAttributes = new { type="month", @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.creditCard.cardExpirationDate, "", new { @class = "text-danger" })
                         </div>
                     </div>
