--- a/744Project/Views/CreditCards/Create.cshtml
+++ b/744Project/Views/CreditCards/Create.cshtml
@@ -46,7 +46,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.cardExpirationDate, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.cardExpirationDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.cardExpirationDate, new { htmlAttributes = new { type = "month", @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.cardExpirationDate, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -67,13 +67,13 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                @*<div class="form-group">
                     @Html.LabelFor(model => model.accountID, "accountID", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("accountID", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.accountID, "", new { @class = "text-danger" })
                     </div>
-                </div>
+                </div>*@
 
 
 
