--- a/744Project/Views/Transactions/Create.cshtml
+++ b/744Project/Views/Transactions/Create.cshtml
@@ -20,7 +20,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.transactionTime, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.transactionTime, new {  htmlAttributes = new { type = "date", @class = "form-control" } })
+                            @Html.EditorFor(model => model.transactionTime, new {  htmlAttributes = new { type = "datetime-local", @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.transactionTime, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -67,21 +67,15 @@
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.connectionID, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.connectionID, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.connectionID, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+          
 
-                    <div class="form-group">
+                    @*<div class="form-group">
                         @Html.LabelFor(model => model.accountID, "accountID", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.DropDownList("accountID", null, htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.accountID, "", new { @class = "text-danger" })
                         </div>
-                    </div>
+                    </div>*@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
