Made changes to Encryption: 1. Encryptions only works if a transaction was not already encrypted. 2. Decryptions only works if a transaction was not already decrypted. 3. After encrypting a transaction, the flag encryptedFlag gets a new value of 1 meaning true, and the same goes for decrypting. 4. Changed the expiration date for credit cards to show only month and year. 5. The code has been tested with the server's database and it works.

--- a/744Project/Views/CreditCards/Index.cshtml
+++ b/744Project/Views/CreditCards/Index.cshtml
@@ -14,7 +14,9 @@
             </p>
             <table class="table">
                 <tr>
-                   
+                    <th>
+                        @Html.DisplayNameFor(model => model.Account.accountNumber)
+                    </th>
                     <th>
                         @Html.DisplayNameFor(model => model.cardNumber)
                     </th>
@@ -33,7 +35,9 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Account.accountNumber)
+                        </td>
                         @*<td>
                             @Html.DisplayFor(modelItem => item.Customer.customerFirstname)
                         </td>*@
