--- a/744Project/Views/Account/Login.cshtml
+++ b/744Project/Views/Account/Login.cshtml
@@ -15,6 +15,7 @@
                         @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                         {
                             <!--Html.AntiForgeryToken()-->
+							<h1 style="color:red">@ViewBag.Lockout</h1>
                             <h4>Use a local account to log in.</h4>
                             <hr />
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -32,6 +33,20 @@
                                     @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+							<div class="form-group">
+								@Html.LabelFor(m => m.SecuriyQuestion, new { @class = "col-md-2 control-label" })
+								<div class="col-md-10">
+									@Model.SecuriyQuestion
+								</div>
+							</div>
+							<div class="form-group">
+								<div style="color:red">@ViewBag.Security</div>
+								@Html.LabelFor(m => m.AnswerToSecurityQuestion, new { @class = "col-md-2 control-label" })
+								<div class="col-md-10">
+									@Html.PasswordFor(m => m.AnswerToSecurityQuestion, new { @class = "form-control" })
+									@Html.ValidationMessageFor(m => m.AnswerToSecurityQuestion, "", new { @class = "text-danger" })
+								</div>
+							</div>
                             <div class="form-group">
                                 <div class="col-md-offset-2 col-md-10">
                                     <div class="checkbox">
