hide all the transaction status, add storeID at create page. Delete, edit transaction function have errors, storeID represents as number, not a string name

--- a/744Project/Views/Transactions/Details.cshtml
+++ b/744Project/Views/Transactions/Details.cshtml
@@ -61,11 +61,11 @@
                     </dd>
 
                     <dt>
-                        @Html.DisplayNameFor(model => model.transactionStatus)
+                        @Html.DisplayNameFor(model => model.storeID)
                     </dt>
 
                     <dd>
-                        @Html.DisplayFor(model => model.transactionStatus)
+                        @Html.DisplayFor(model => model.cardID);
                     </dd>
 
 
