--- a/744Project/Views/Transactions/Index.cshtml
+++ b/744Project/Views/Transactions/Index.cshtml
@@ -33,7 +33,7 @@
                         @Html.DisplayNameFor(model => model.transactionMerchant)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.transactionStatus)
+                        @Html.DisplayNameFor(model => model.storeID)
                     </th>
                  
                     <th></th>
@@ -61,7 +61,7 @@
                             @Html.DisplayFor(modelItem => item.transactionMerchant)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.transactionStatus)
+                            @Html.DisplayFor(modelItem => item.storeID)
                         </td>
                        
                         <td>
