--- a/744Project/Views/Transactions/Delete.cshtml
+++ b/744Project/Views/Transactions/Delete.cshtml
@@ -62,11 +62,11 @@
                     </dd>
 
                     <dt>
-                        @Html.DisplayNameFor(model => model.transactionStatus)
+                        @Html.DisplayNameFor(model => model.storeID)
                     </dt>
 
                     <dd>
-                        @Html.DisplayFor(model => model.transactionStatus)
+                        @Html.DisplayFor(model => model.storeID)
                     </dd>
 
                   
